5.1.0:
- New: Another sandy Pixel 6 wallpaper
- New: Hebrew translation
- New: additional blue (new default) and purple app themes
- Improved: random wallpaper option
- Improved: app theme selection
- Improved: app colors
- Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
- Fixed: unchanged text contrast when switching dark mode inside an app

Please consider translating this app into your language at Transifex. There are only 117 strings to translate!

5.0.2:
- New: Dutch, Indonesian & Italian translations
- Fixed: potential crashes and bugs

5.0.1:
- Fixed: crash caused by compiler
- Fixed: crash caused by previously stored preferences

5.0.0:
- New: complete implementation of Material Design 3
- New: dynamic colors in Doodle settings app for supported devices with Android 12+ (Material You)
- New: various app color themes for devices without dynamic color support
- New: option to change language (translated by amazing volunteers on Transifex, thank you all!)
- New: another exclusive live wallpaper based on Pixel 6 wallpapers (still more to come!)
- New: option for random wallpaper design every time the display is turned off
- New: customizable extracted wallpaper colors for devices with dynamic color support
- Improved: changed settings are applied to the running wallpaper instantly
- Improved: restart behavior for applying certain settings
- Improved: splash screen implementation for Android 12+
- Fixed: broken buttons in feedback dialog

4.2.0:
- New: exclusive live wallpapers based on leaked Pixel 6 wallpapers
- New: another live wallpaper based on an artwork by Anna Kövecses
- Improved: shape rotation
- Fixed: wrong tilt effect direction in landscape mode

4.1.0:
- New: live wallpaper based on a static Chrome OS wallpaper by Anna Kövecses
- New: support for Android versions down to Android 5
- Improved: Material You wallpaper variants