@@ -5,6 +5,7 @@
 - Improved: random wallpaper option
 - Improved: app theme selection
 - Improved: app colors
+- Improved: bold text now correctly styled even if system font is used as fallback (Chinese, Hebrew and Uyghur)
 - Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
 - Fixed: unchanged text contrast when switching dark mode inside an app
 
